# RSC2025-GakTau

./: .gitignore  README.md  a.out  demo.cpp
src/: command.txt
src/drone_controller/: CMakeLists.txt  command.txt  package.xml
src/drone_controller/src/: drone_controller.cpp
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/src/: map_manager.cpp  queue_obs.hpp  queue_vic.hpp
src/mission_client/: CMakeLists.txt  package.xml
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: path_planner.cpp
src/uav_interfaces/: CMakeLists.txt  package.xml
src/uav_interfaces/action/: RescueMission.action
src/uav_interfaces/msg/: DroneStatus.msg  Flag.msg  MapState.msg
src/uav_interfaces/srv/: AddObstacle.srv  AddVictim.srv  RemoveVictim.srv  UpdateDronePosition.srv
src/uav_rescue/: CMakeLists.txt  package.xml
src/uav_rescue/launch/: uav_rescue_launch.py
