<?xml version="1.0"?>
<package format="3">
  <name>uav_rescue</name>
  <version>0.0.0</version>
  <description>UAV Rescue Package</description>
  <maintainer email="adhimas@todo.todo">adhimas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

